--- a/nginx.conf
+++ b/nginx.conf
@@ -25,15 +25,16 @@ server {
     }
 
     location /order {
-        proxy_pass http://order-service:3000/;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Content-Type application/json;
-        proxy_buffering off;
+    proxy_pass http://order-service.bestbuy.svc.cluster.local:3000/;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Content-Type application/json;
+    proxy_buffering off;
     }
+
 
     location /products {
         proxy_pass http://product-service:3002/;
